--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -21,10 +21,19 @@
 
     <link rel="stylesheet" href="bootstrap-5.1.3-dist/css/bootstrap.css">
 
+    <!-- Keywords -->
+    <meta name="Keywords" content="Soluciones Nutricionales, Viandas, Viandas saludables, Sano, Rico, Nutrititvo">
+
+    <!-- Description -->
+    <meta name="description" content="Inicio de mi página web, viandas saludables para empresas y particulares">
+
     <!-- Link a mi css -->
     <link rel="stylesheet" href="../css/main.css">
 
-    <title>Soluciones Nutricionales</title>
+    <!-- Favicon -->
+    <link rel="icon" href="" sizes="16x16">
+
+    <title>Soluciones Nutricionales - Nosotros</title>
 </head>
 
 <body>
