--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -22,10 +22,10 @@
     <link rel="stylesheet" href="bootstrap-5.1.3-dist/css/bootstrap.css">
 
     <!-- Keywords -->
-    <meta name="Keywords" content="Soluciones Nutricionales, Viandas, Viandas saludables, Sano, Rico, Nutrititvo">
+    <meta name="Keywords" content="viandas.sn@gmai.com, Contacto, 1162066953, WhatsApp">
 
     <!-- Description -->
-    <meta name="description" content="Inicio de mi página web, viandas saludables para empresas y particulares">
+    <meta name="description" content="Contactate con nosotros a través de WhatsApp 1162066953 o por mail viandas.sn@gmail.com">
 
     <!-- Link a mi css -->
     <link rel="stylesheet" href="../css/main.css">
