--- a/pages/hace-tu-pedido.html
+++ b/pages/hace-tu-pedido.html
@@ -22,10 +22,10 @@
     <link rel="stylesheet" href="bootstrap-5.1.3-dist/css/bootstrap.css">
 
     <!-- Keywords -->
-    <meta name="Keywords" content="Soluciones Nutricionales, Viandas, Viandas saludables, Sano, Rico, Nutrititvo">
+    <meta name="Keywords" content="Menú, Pedido, Precios accesibles, Viandas saludables, Viandas">
 
     <!-- Description -->
-    <meta name="description" content="Inicio de mi página web, viandas saludables para empresas y particulares">
+    <meta name="description" content="Generá tu pedido con las viandas que más te gusten">
 
     <!-- Link a mi css -->
     <link rel="stylesheet" href="../css/main.css">
@@ -103,7 +103,7 @@
                 <textarea name="Escriba aquí" id="" cols="30" rows="10"></textarea>
 
                 <p class="center-content"></p>
-                <input type="button" value="ENVIAR" id="boton">
+                <input type="boton" value="ENVIAR" id="boton">
 
             </form>
         </main>
