--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -22,10 +22,10 @@
     <link rel="stylesheet" href="bootstrap-5.1.3-dist/css/bootstrap.css">
 
     <!-- Keywords -->
-    <meta name="Keywords" content="Soluciones Nutricionales, Viandas, Viandas saludables, Sano, Rico, Nutrititvo">
+    <meta name="Keywords" content="Pack de viandas, Comida saludable, Viandas, Servicios">
 
     <!-- Description -->
-    <meta name="description" content="Inicio de mi página web, viandas saludables para empresas y particulares">
+    <meta name="description" content="Servicio de viandas, packs de viandas y opciones saludables">
 
     <!-- Link a mi css -->
     <link rel="stylesheet" href="../css/main.css">
