--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -31,7 +31,8 @@
     <link rel="stylesheet" href="../css/main.css">
 
     <!-- Favicon -->
-    <link rel="icon" href="" sizes="16x16">
+    <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="../pages/img/favicon.ico" type="image/x-icon" sizes="16x16">
 
     <title>Soluciones Nutricionales - Contacto</title>
 </head>
