Actualizo y vinculo mis html

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <meta name="description" content="Inicio de mi página web, viandas saludables para empresas y particulares">
 
     <!-- Link a mi css -->
-    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="./css/estilosscss.css">
 
     <!-- Favicon -->
 
