--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -28,7 +28,7 @@
     <meta name="description" content="Contactate con nosotros a través de WhatsApp 1162066953 o por mail viandas.sn@gmail.com">
 
     <!-- Link a mi css -->
-    <link rel="stylesheet" href="../css/main.css">
+    <link rel="stylesheet" href="../css/estilosscss.css">
 
     <!-- Favicon -->
     <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
