--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -28,7 +28,7 @@
     <meta name="description" content="Nuestro equipo de cocina, quienes somos">
 
     <!-- Link a mi css -->
-    <link rel="stylesheet" href="../css/main.css">
+    <link rel="stylesheet" href="../css/estilosscss.css">
 
     <!-- Favicon -->
     <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
