--- a/pages/hace-tu-pedido.html
+++ b/pages/hace-tu-pedido.html
@@ -28,7 +28,7 @@
     <meta name="description" content="Generá tu pedido con las viandas que más te gusten">
 
     <!-- Link a mi css -->
-    <link rel="stylesheet" href="../css/main.css">
+    <link rel="stylesheet" href="../css/estilosscss.css">
 
     <!-- Favicon -->
     <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
