--- a/pages/inicio.html
+++ b/pages/inicio.html
@@ -22,7 +22,7 @@
     <link rel="stylesheet" href="bootstrap-5.1.3-dist/css/bootstrap.css">
 
     <!-- Link a mi css -->
-    <link rel="stylesheet" href="../css/main.css">
+    <link rel="stylesheet" href="../css/estilosscss.css">
 
     <title>Soluciones Nutricionales</title>
 </head>
