--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -28,7 +28,7 @@
     <meta name="description" content="Servicio de viandas, packs de viandas y opciones saludables">
 
     <!-- Link a mi css -->
-    <link rel="stylesheet" href="../css/main.css">
+    <link rel="stylesheet" href="../css/estilosscss.css">
 
     <!-- Favicon -->
     <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
