--- a/pages/inicio.html
+++ b/pages/inicio.html
@@ -42,7 +42,7 @@
                     <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                         <li class="nav-item">
                             <a class="nav-link align-self-center active aria-current"
-                                href="inicio.html">Inicio</a>
+                                href="../index.html">Inicio</a>
                         </li>
                         <li class="nav-item d-flex">
                             <a class="nav-link align-self-center text-dark"
