ENTREGA 3 PROYECTO FINAL

--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -65,13 +65,17 @@
                                 href="./servicios.html">Servicios</a>
                         </li>
                         <li class="nav-item d-flex">
+                            <a class="nav-link align-self-center text-dark"
+                                href="./viandas.html">Viandas</a>
+                        </li>
+                        <li class="nav-item d-flex">
                             <a class="btn btn-primary">Descarga la app</a>
                         </li>
                     </ul>
                 </div>
             </div>
         </nav>
-        <div class="content mx-auto">
+        <div class="content_auto">
             <img class="banner" src="./img/banner-salad.jpg" alt="banner salad">
         </div>
     </header>
@@ -82,71 +86,49 @@
         <div class="container-all">
             <h2 class="title">¡Ahora podés pedir viandas y guardarlas en el frezzer!</h2>
             <img src="../pages/img/banner-frezzer.jpg" alt="desde-casa">
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Labore illum esse iure rerum magnam
-                pariatur culpavoluptates ducimus! Porro mollitia quos illo ratione neque repudiandae, doloribus
-                molestiae quasi
-                liberocum? <span>Quia a aliquam et expedita delectus r</span> epellat, quod corrupti. Quas cum
-                reprehenderit</p>
-        </div>
-
         <div class="contenido">
             <div class="row abs-center">
                 <div class="col-sm-6">
                     <div class="content-02">
+                    
                         <article class="article">
-                            <h1>Title</h1>
-                            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Corporis odio deserunt itaque
-                                quos
-                                ipsam aperiam quibusdam natus fuga doloribus quisquam. Dolores cupiditate quidem eius
-                                quaerat
-                                cumque, magnam vero neque nam!</p>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi, id.</p>
-                            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quos, excepturi.</p>
+                            <h1>Viandas para empresas o instituciones</h1>
+                            <p>Almuerzos que se entregan a diario, llegan frescas, listas para que el comensal disfrute de su almuerzo. Los pedidos se realizan a través de una plataforma y las mismas llegan dentro de un contenedor en bandejas de plástico (apta microondas) precintadas y rotuladas. </p>
+                            <p>Soluciones Nutricionales ofrece una variedad de menús por día con más de 10 opciones diferentes todos los días según las preferencias de cada cliente.</p>
                         </article>
 
                         <article class="article">
-                            <h1>Title</h1>
-                            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Corporis odio deserunt itaque
-                                quos
-                                ipsam aperiam quibusdam natus fuga doloribus quisquam. Dolores cupiditate quidem eius
-                                quaerat
-                                cumque, magnam vero neque nam!</p>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi, id.</p>
-                            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quos, excepturi.</p>
+                            <h1>Servicio asistido en el lugar de trabajo</h1>
+                            <p> Soluciones Nutricionales arma un punto de venta en las instalaciones del cliente y ofrece sus opciones de almuerzo más los productos de cafetería y kiosco. Quien contrata este servicio puede optar por financiar parcialmente o en su totalidad el almuerzo, a través de diferentes formas. </p>
+                            <p>¡Los comensales pueden reservar sus pedidos a través de nuestra plataforma para garantizar siempre la disponibilidad de su plato preferido!</p>
                         </article>
 
                         <article class="article">
-                            <h1>Title</h1>
-                            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Corporis odio deserunt itaque
-                                quos
-                                ipsam aperiam quibusdam natus fuga doloribus quisquam. Dolores cupiditate quidem eius
-                                quaerat
-                                cumque, magnam vero neque nam!</p>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi, id.</p>
-                            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quos, excepturi.</p>
+                            <h1>Soluciones a tu casa</h1>
+                            <p>¡Les acercamos la solución para todas sus comidas!</p>
+                            <p>Para solucionar y salvarte desde esas comidas sin horarios por el home office, o llevarte tu vianda ya lista para el trabajo, y por qué no también hasta un rico y nutritivo almuerzo/cena en familia! Con "Soluciones" en tu Casa simplemente elegís que comer, compras y lo recibís en tu hogar. Podes congelar sin problema las comidas y tenerlas organizadas en tú freezer listas para disfrutarlas en cualquier momento!</p>
+                            <p>¡Decidir qué almorzar o cenar ya no es un problema</p>
                         </article>
+
                     </div>
                 </div>
                 <div class="col-lg-6">
                     <div class="img">
                         <aside class="sidebar-02">
                             <div>
-                                <img src="../pages/img/mila-ens.JPG" alt="plato1">
-                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus commodi</p>
+                                <img src="../pages/img/comedores.jpg" alt="plato1">
                             </div>
                         </aside>
 
                         <aside class="sidebar-02">
                             <div>
-                                <img src="../pages/img/medallon-wok-fondo.JPG" alt="plato2">
-                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus commodi</p>
+                                <img src="../pages/img/oficina.jpg" alt="plato2">
                             </div>
                         </aside>
 
                         <aside class="sidebar-02">
                             <div>
-                                <img src="../pages/img/wrap-carne.JPG" alt="plato3">
-                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus commodi</p>
+                                <img src="../pages/img/frezzer-02.jpg" alt="plato3">
                             </div>
                         </aside>
                     </div>
@@ -157,10 +139,7 @@
     <footer class="footer">
         <div class="box">
             <h2>SOBRE NOSOTROS</h2>
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Libero, laboriosam neque laudantium
-                dolorum?</p>
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Libero, laboriosam neque laudantium
-                dolorum?</p>
+            <p>Somos una empresa de viandas formada por nutricionista y nuestro proposito es nutrir al mundo elaborando día a día viandas saludables, caseras y nutrititas</p>
         </div>
 
         <div class="sociales">
