--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <meta name="description" content="Inicio de mi página web, viandas saludables para empresas y particulares">
 
     <!-- Link a mi css -->
-    <link rel="stylesheet" href="./css/estilosscss.css">
+    <link rel="stylesheet" href="css/main.css">
 
     <!-- Favicon -->
 
@@ -65,13 +65,16 @@
                             <a class="nav-link align-self-center text-dark" href="./pages/servicios.html">Servicios</a>
                         </li>
                         <li class="nav-item d-flex">
+                            <a class="nav-link align-self-center text-dark" href="./pages/viandas.html">Viandas</a>
+                        </li>
+                        <li class="nav-item d-flex">
                             <a class="btn btn-primary">Descarga la app</a>
                         </li>
                     </ul>
                 </div>
             </div>
         </nav>
-        <div class="content mx-auto">
+        <div class="content_auto">
             <img class="banner" src="./pages/img/banner-salad.jpg" alt="banner salad">
         </div>
     </header>
