--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -28,7 +28,7 @@
     <meta name="description" content="Contactate con nosotros a través de WhatsApp 1162066953 o por mail viandas.sn@gmail.com">
 
     <!-- Link a mi css -->
-    <link rel="stylesheet" href="../css/estilosscss.css">
+    <link rel="stylesheet" href="../css/main.css">
 
     <!-- Favicon -->
     <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
@@ -55,6 +55,7 @@
                     <li><a href="./nosotros.html">Nosotros</a></li>
                     <li><a href="./servicios.html">Servicios</a></li>
                     <li><a href="./hace-tu-pedido.html">Hacé tu pedido</a></li>
+                    <li><a href="./viandas.html">Viandas</a></li>
                     <li><a href="./contacto.html" class="active">Contacto</a></li>
                 </ul>
             </nav>
@@ -69,10 +70,7 @@
         <footer class="footer">
             <div class="box">
                 <h2>SOBRE NOSOTROS</h2>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Libero, laboriosam neque laudantium
-                    dolorum?</p>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Libero, laboriosam neque laudantium
-                    dolorum?</p>
+                <p>Somos una empresa de viandas formada por nutricionista y nuestro proposito es nutrir al mundo elaborando día a día viandas saludables, caseras y nutrititas</p>
             </div>
     
             <div class="sociales">
