--- a/pages/hace-tu-pedido.html
+++ b/pages/hace-tu-pedido.html
@@ -68,13 +68,17 @@
                                 href="./servicios.html">Servicios</a>
                         </li>
                         <li class="nav-item d-flex">
+                            <a class="nav-link align-self-center text-dark"
+                                href="./viandas.html">Viandas</a>
+                        </li>
+                        <li class="nav-item d-flex">
                             <a class="btn btn-primary">Descarga la app</a>
                         </li>
                     </ul>
                 </div>
             </div>
         </nav>
-        <div class="content mx-auto">
+        <div class="content_auto">
             <img class="banner" src="./img/banner-salad.jpg" alt="banner salad">
         </div>
     </header>
@@ -112,10 +116,7 @@
     <footer class="footer">
         <div class="box">
             <h2>SOBRE NOSOTROS</h2>
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Libero, laboriosam neque laudantium
-                dolorum?</p>
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Libero, laboriosam neque laudantium
-                dolorum?</p>
+            <p>Somos una empresa de viandas formada por nutricionista y nuestro proposito es nutrir al mundo elaborando día a día viandas saludables, caseras y nutrititas</p>
         </div>
 
         <div class="sociales">
