--- a/pages/inicio.html
+++ b/pages/inicio.html
@@ -22,7 +22,7 @@
     <link rel="stylesheet" href="bootstrap-5.1.3-dist/css/bootstrap.css">
 
     <!-- Link a mi css -->
-    <link rel="stylesheet" href="../css/estilosscss.css">
+    <link rel="stylesheet" href="../css/main.css">
 
     <title>Soluciones Nutricionales</title>
 </head>
@@ -42,7 +42,7 @@
                     <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                         <li class="nav-item">
                             <a class="nav-link align-self-center active aria-current"
-                                href="../index.html">Inicio</a>
+                                href="inicio.html">Inicio</a>
                         </li>
                         <li class="nav-item d-flex">
                             <a class="nav-link align-self-center text-dark"
@@ -53,8 +53,12 @@
                                 href="./hace-tu-pedido.html">Hacé tu pedido</a>
                         </li>
                         <li class="nav-item d-flex">
-                            <a class="nav-link align-self-center text-dark"
+                            <a class="nav-link align-self-center text-dark active aria-current"
                                 href="./servicios.html">Servicios</a>
+                        </li>
+                        <li class="nav-item d-flex">
+                            <a class="nav-link align-self-center text-dark active aria-current"
+                                href="./viandas.html">Viandas</a>
                         </li>
                         <li class="nav-item d-flex">
                             <a class="btn btn-primary">Descarga la app</a>
@@ -63,18 +67,17 @@
                 </div>
             </div>
         </nav>
-        <div class="content mx-auto">
+        <div class="content_auto">
             <img class="banner" src="./img/banner-salad.jpg" alt="banner salad">
         </div>
     </header>
 
     <footer class="footer">
         <div class="box">
-            <h2>SOBRE NOSOTROS</h2>
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Libero, laboriosam neque laudantium
-                dolorum?</p>
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Libero, laboriosam neque laudantium
-                dolorum?</p>
+            <div class="box">
+                <h2>SOBRE NOSOTROS</h2>
+                <p>Somos una empresa de viandas formada por nutricionista y nuestro proposito es nutrir al mundo elaborando día a día viandas saludables, caseras y nutrititas</p>
+            </div>
         </div>
 
         <div class="sociales">
