--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <meta name="description" content="Inicio de mi página web, viandas saludables para empresas y particulares">
 
     <!-- Link a mi css -->
-    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/estilosscss.css">
 
     <!-- Favicon -->
 
@@ -52,7 +52,7 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                         <li class="nav-item">
-                            <a class="nav-link text-dark active aria-current" href="./scss/index.html">Inicio</a>
+                            <a class="nav-link align-self-center text-dark active aria-current" href="./index.html">Inicio</a>
                         </li>
                         <li class="nav-item d-flex">
                             <a class="nav-link align-self-center text-dark" href="./pages/nosotros.html">Nosotros</a>
@@ -68,7 +68,7 @@
                             <a class="nav-link align-self-center text-dark" href="./pages/viandas.html">Viandas</a>
                         </li>
                         <li class="nav-item d-flex">
-                            <a class="btn btn-primary">Descarga la app</a>
+                            <a href="https://www.apple.com/la/app-store/" class="btn-btn-primary">Descarga la app</a>
                         </li>
                     </ul>
                 </div>
@@ -78,18 +78,18 @@
             <img class="banner" src="./pages/img/banner-salad.jpg" alt="banner salad">
         </div>
     </header>
-    <main style="height: 200vh; padding: 50px 0;">
+    <main>
         <section class="container">
             <div class="row h-100">
                 <div class="col-lg-6">
-                    <div class="content mx-auto">
+                    <div class="content-mx-auto">
                         <h1 class="display-4 fw-bold mb-4">Es un buen momento para disfrutar de las ventajas de una
                             alimentación rica y nutritiva.</h1>
                         <small class="d-block text-primary mb-3"> <span
                                 class="badge bg-primary">CONTACTANOS</span></small>
                         <p class="lead mb-4">Todo lo natural, sano y rico de los alimentos, en tus comidas todos los
                             días</p>
-                        <a href="a" class="btn btn-primary mb-5">ACCEDÉ A NUESTRO MENÚ</a>
+                        <a href="./pages/viandas.html" class="btn-primary01">ACCEDÉ A NUESTRO MENÚ</a>
                     </div>
 
                 </div>
@@ -103,20 +103,19 @@
     </main>
     <footer class="footer">
         <div class="box">
-            <h2>SOBRE NOSOTROS</h2>
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Libero, laboriosam neque laudantium
-                dolorum?</p>
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Libero, laboriosam neque laudantium
-                dolorum?</p>
+            <div class="box">
+                <h2>SOBRE NOSOTROS</h2>
+                <p>Somos una empresa de viandas formada por nutricionista y nuestro proposito es nutrir al mundo elaborando día a día viandas saludables, caseras y nutrititas</p>
+            </div>
         </div>
 
         <div class="sociales">
             <ul>
-                <li><a href="#" class="facebook"><i class="fab fa-facebook-f"></i></a></li>
-                <li><a href="#" class="twitter"><i class="fab fa-twitter"></i></a></li>
-                <li><a href="#" class="instagram"><i class="fab fa-instagram"></i></a></li>
-                <li><a href="#" class="pinterest"><i class="fab fa-pinterest-p"></i></a></li>
-                <li><a href="#" class="linkedin"><i class="fab fa-linkedin-in"></i></a></li>
+                <li><a href="#" class="red-facebook"><i class="fab fa-facebook-f"></i></a></li>
+                <li><a href="#" class="red-twitter"><i class="fab fa-twitter"></i></a></li>
+                <li><a href="#" class="red-instagram"><i class="fab fa-instagram"></i></a></li>
+                <li><a href="#" class="red-pinterest"><i class="fab fa-pinterest-p"></i></a></li>
+                <li><a href="#" class="red-linkedin"><i class="fab fa-linkedin-in"></i></a></li>
             </ul>
         </div>
 
