--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -28,7 +28,7 @@
     <meta name="description" content="Contactate con nosotros a través de WhatsApp 1162066953 o por mail viandas.sn@gmail.com">
 
     <!-- Link a mi css -->
-    <link rel="stylesheet" href="../css/main.css">
+    <link rel="stylesheet" href="../css/estilosscss.css">
 
     <!-- Favicon -->
     <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
@@ -62,9 +62,6 @@
         </header>
         <!-- INICIO SECCION PRINCIPAL -->
         <main>
-            <div class="">
-
-            </div>
 
         </main>
         <footer class="footer">
@@ -75,11 +72,11 @@
     
             <div class="sociales">
                 <ul>
-                    <li><a href="#" class="facebook"><i class="fab fa-facebook-f"></i></a></li>
-                    <li><a href="#" class="twitter"><i class="fab fa-twitter"></i></a></li>
-                    <li><a href="#" class="instagram"><i class="fab fa-instagram"></i></a></li>
-                    <li><a href="#" class="pinterest"><i class="fab fa-pinterest-p"></i></a></li>
-                    <li><a href="#" class="linkedin"><i class="fab fa-linkedin-in"></i></a></li>
+                    <li><a href="#" class="red-facebook"><i class="fab fa-facebook-f"></i></a></li>
+                    <li><a href="#" class="red-twitter"><i class="fab fa-twitter"></i></a></li>
+                    <li><a href="#" class="red-instagram"><i class="fab fa-instagram"></i></a></li>
+                    <li><a href="#" class="red-pinterest"><i class="fab fa-pinterest-p"></i></a></li>
+                    <li><a href="#" class="red-linkedin"><i class="fab fa-linkedin-in"></i></a></li>
                 </ul>
             </div>
     
