--- a/pages/hace-tu-pedido.html
+++ b/pages/hace-tu-pedido.html
@@ -17,7 +17,7 @@
         rel="stylesheet">
     <!-- LINK FUENTE ICONOS -->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
-    integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
+        integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
 
     <link rel="stylesheet" href="bootstrap-5.1.3-dist/css/bootstrap.css">
 
@@ -52,27 +52,23 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                         <li class="nav-item">
-                            <a class="nav-link" text-dark active aria-current="page"
-                                href="../index.html">Inicio</a>
+                            <a class="nav-link" text-dark active aria-current="page" href="../index.html">Inicio</a>
                         </li>
                         <li class="nav-item d-flex">
-                            <a class="nav-link align-self-center text-dark"
-                                href="./nosotros.html">Nosotros</a>
+                            <a class="nav-link align-self-center text-dark" href="./nosotros.html">Nosotros</a>
                         </li>
                         <li class="nav-item d-flex">
                             <a class="nav-link align-self-center text-dark active aria-current"
                                 href="./hace-tu-pedido.html">Hacé tu pedido</a>
                         </li>
                         <li class="nav-item d-flex">
-                            <a class="nav-link align-self-center text-dark"
-                                href="./servicios.html">Servicios</a>
+                            <a class="nav-link align-self-center text-dark" href="./servicios.html">Servicios</a>
                         </li>
                         <li class="nav-item d-flex">
-                            <a class="nav-link align-self-center text-dark"
-                                href="./viandas.html">Viandas</a>
+                            <a class="nav-link align-self-center text-dark" href="./viandas.html">Viandas</a>
                         </li>
                         <li class="nav-item d-flex">
-                            <a class="btn btn-primary">Descarga la app</a>
+                            <a href="https://www.apple.com/la/app-store/" class="btn-btn-primary">Descarga la app</a>
                         </li>
                     </ul>
                 </div>
@@ -83,57 +79,60 @@
         </div>
     </header>
 
-        <!-- INICIO SECCION PRINCIPAL -->
+    <!-- INICIO SECCION PRINCIPAL -->
 
-        <main>
-            <div class="pedidos">
+    <main>
+        <div class="pedidos">
 
-                <h2>¡RECIBÍ NUESTRO MENÚ SEMANAL!</h2>
-            </div>
+            <h2>¡RECIBÍ NUESTRO MENÚ SEMANAL!</h2>
 
             <form action="formulario">
-                <p>Nombre:</p>
+                <label for="nombre">Nombre:</label>
                 <input type="text" class="field">
 
-                <p>Apellido:</p>
+                <label for="nombre">Apellido:</label>
                 <input type="text" class="field">
 
-                <p>Email:</p>
-                <input type="text" class="field">
+                <label for="nombre">Email:</label>
+                <input type="email" class="field" required>
 
-                <p>Teléfono:</p>
-                <input type="text" class="field">
+                <label for="nombre">Teléfono:</label>
+                <input type="number" class="field">
 
-                <p>Comentario</p>
-                <textarea name="Escriba aquí" id="" cols="30" rows="10"></textarea>
+                <label for="nombre">Comentario:</label>
+                <textarea placeholder="Escriba aquí un comentario" id="40" cols="70" rows="5"></textarea>
 
-                <p class="center-content"></p>
-                <input type="boton" value="ENVIAR" id="boton">
+                <p class="comment"></p>
+                <input type="submit" value="ENVIAR" id="boton">
 
             </form>
-        </main>
-    </div>
+        </div>
+    </main>
     <footer class="footer">
         <div class="box">
             <h2>SOBRE NOSOTROS</h2>
-            <p>Somos una empresa de viandas formada por nutricionista y nuestro proposito es nutrir al mundo elaborando día a día viandas saludables, caseras y nutrititas</p>
+            <p>Somos una empresa de viandas formada por nutricionista y nuestro proposito es nutrir al mundo elaborando
+                día a día viandas saludables, caseras y nutrititas</p>
         </div>
 
         <div class="sociales">
             <ul>
-                <li><a href="#" class="facebook"><i class="fab fa-facebook-f"></i></a></li>
-                <li><a href="#" class="twitter"><i class="fab fa-twitter"></i></a></li>
-                <li><a href="#" class="instagram"><i class="fab fa-instagram"></i></a></li>
-                <li><a href="#" class="pinterest"><i class="fab fa-pinterest-p"></i></a></li>
-                <li><a href="#" class="linkedin"><i class="fab fa-linkedin-in"></i></a></li>
+                <li><a href="#" class="red-facebook"><i class="fab fa-facebook-f"></i></a></li>
+                <li><a href="#" class="red-twitter"><i class="fab fa-twitter"></i></a></li>
+                <li><a href="#" class="red-instagram"><i class="fab fa-instagram"></i></a></li>
+                <li><a href="#" class="red-pinterest"><i class="fab fa-pinterest-p"></i></a></li>
+                <li><a href="#" class="red-linkedin"><i class="fab fa-linkedin-in"></i></a></li>
             </ul>
         </div>
 
         <div class="map">
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d7473.7528882259185!2d-58.36845102509377!3d-34.668622535111204!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bccceccdd8d455%3A0xe771f022c22a954b!2sEstadio%20Presidente%20Per%C3%B3n!5e0!3m2!1ses-419!2sar!4v1648685801522!5m2!1ses-419!2sar"
+            <iframe
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d7473.7528882259185!2d-58.36845102509377!3d-34.668622535111204!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bccceccdd8d455%3A0xe771f022c22a954b!2sEstadio%20Presidente%20Per%C3%B3n!5e0!3m2!1ses-419!2sar!4v1648685801522!5m2!1ses-419!2sar"
                 width="300" height="200" style="border:0;" allowfullscreen="" loading="lazy"
                 referrerpolicy="no-referrer-when-downgrade"></iframe>
-            <p><h6> &copy; Todos los derechos reservados | <b>Desarrollo en html y css</b></h6></p>
+            <p>
+            <h6> &copy; Todos los derechos reservados | <b>Desarrollo en html y css</b></h6>
+            </p>
         </div>
 
         <div class="redes">
@@ -154,15 +153,16 @@
                 </div>
             </div>
             <div class="d-flex">
-                    <div>
-                        <a href="https://api.whatsapp.com/send?phone=1162066953"> <img src="../pages/img/whatsapp.png" alt="whatsapp" width="55" height="55" class="btn-wsp" target="_blank"></a>
-                    </div>
-        </div>
+                <div>
+                    <a href="https://api.whatsapp.com/send?phone=1162066953"> <img src="../pages/img/whatsapp.png"
+                            alt="whatsapp" width="55" height="55" class="btn-wsp" target="_blank"></a>
+                </div>
+            </div>
     </footer>
-        <!-- Link a script de Bootstrap -->
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
-integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
-crossorigin="anonymous"></script>
+    <!-- Link a script de Bootstrap -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
