--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -69,7 +69,7 @@
                                 href="./viandas.html">Viandas</a>
                         </li>
                         <li class="nav-item d-flex">
-                            <a class="btn btn-primary">Descarga la app</a>
+                            <a href="https://www.apple.com/la/app-store/" class="btn-btn-primary">Descarga la app</a>
                         </li>
                     </ul>
                 </div>
@@ -92,19 +92,19 @@
                     <div class="content-02">
                     
                         <article class="article">
-                            <h1>Viandas para empresas o instituciones</h1>
+                            <h2>Viandas para empresas o instituciones</h2>
                             <p>Almuerzos que se entregan a diario, llegan frescas, listas para que el comensal disfrute de su almuerzo. Los pedidos se realizan a través de una plataforma y las mismas llegan dentro de un contenedor en bandejas de plástico (apta microondas) precintadas y rotuladas. </p>
                             <p>Soluciones Nutricionales ofrece una variedad de menús por día con más de 10 opciones diferentes todos los días según las preferencias de cada cliente.</p>
                         </article>
 
                         <article class="article">
-                            <h1>Servicio asistido en el lugar de trabajo</h1>
+                            <h2>Servicio asistido en el lugar de trabajo</h2>
                             <p> Soluciones Nutricionales arma un punto de venta en las instalaciones del cliente y ofrece sus opciones de almuerzo más los productos de cafetería y kiosco. Quien contrata este servicio puede optar por financiar parcialmente o en su totalidad el almuerzo, a través de diferentes formas. </p>
                             <p>¡Los comensales pueden reservar sus pedidos a través de nuestra plataforma para garantizar siempre la disponibilidad de su plato preferido!</p>
                         </article>
 
                         <article class="article">
-                            <h1>Soluciones a tu casa</h1>
+                            <h2>Soluciones a tu casa</h2>
                             <p>¡Les acercamos la solución para todas sus comidas!</p>
                             <p>Para solucionar y salvarte desde esas comidas sin horarios por el home office, o llevarte tu vianda ya lista para el trabajo, y por qué no también hasta un rico y nutritivo almuerzo/cena en familia! Con "Soluciones" en tu Casa simplemente elegís que comer, compras y lo recibís en tu hogar. Podes congelar sin problema las comidas y tenerlas organizadas en tú freezer listas para disfrutarlas en cualquier momento!</p>
                             <p>¡Decidir qué almorzar o cenar ya no es un problema</p>
@@ -116,19 +116,19 @@
                     <div class="img">
                         <aside class="sidebar-02">
                             <div>
-                                <img src="../pages/img/comedores.jpg" alt="plato1">
+                                <img src="../pages/img/comedores.jpg" alt="Empresas o instituciones">
                             </div>
                         </aside>
 
                         <aside class="sidebar-02">
                             <div>
-                                <img src="../pages/img/oficina.jpg" alt="plato2">
+                                <img src="../pages/img/oficina.jpg" alt="Colaboradores almorzando en oficinas">
                             </div>
                         </aside>
 
                         <aside class="sidebar-02">
                             <div>
-                                <img src="../pages/img/frezzer-02.jpg" alt="plato3">
+                                <img src="../pages/img/frezzer-02.jpg" alt="Viandas a domicilio">
                             </div>
                         </aside>
                     </div>
@@ -144,11 +144,11 @@
 
         <div class="sociales">
             <ul>
-                <li><a href="#" class="facebook"><i class="fab fa-facebook-f"></i></a></li>
-                <li><a href="#" class="twitter"><i class="fab fa-twitter"></i></a></li>
-                <li><a href="#" class="instagram"><i class="fab fa-instagram"></i></a></li>
-                <li><a href="#" class="pinterest"><i class="fab fa-pinterest-p"></i></a></li>
-                <li><a href="#" class="linkedin"><i class="fab fa-linkedin-in"></i></a></li>
+                <li><a href="#" class="red-facebook"><i class="fab fa-facebook-f"></i></a></li>
+                <li><a href="#" class="red-twitter"><i class="fab fa-twitter"></i></a></li>
+                <li><a href="#" class="red-instagram"><i class="fab fa-instagram"></i></a></li>
+                <li><a href="#" class="red-pinterest"><i class="fab fa-pinterest-p"></i></a></li>
+                <li><a href="#" class="red-linkedin"><i class="fab fa-linkedin-in"></i></a></li>
             </ul>
         </div>
 
