--- a/pages/viandas.html
+++ b/pages/viandas.html
@@ -76,7 +76,7 @@
                                         href="./viandas.html">Viandas</a>
                                 </li>
                                 <li class="nav-item d-flex">
-                                    <a class="btn btn-primary">Descarga la app</a>
+                                    <a href="https://www.apple.com/la/app-store/" class="btn-btn-primary">Descarga la app</a>
                                 </li>
                             </ul>
                         </div>
@@ -122,11 +122,11 @@
 
             <div class="sociales">
                 <ul>
-                    <li><a href="#" class="facebook"><i class="fab fa-facebook-f"></i></a></li>
-                    <li><a href="#" class="twitter"><i class="fab fa-twitter"></i></a></li>
-                    <li><a href="#" class="instagram"><i class="fab fa-instagram"></i></a></li>
-                    <li><a href="#" class="pinterest"><i class="fab fa-pinterest-p"></i></a></li>
-                    <li><a href="#" class="linkedin"><i class="fab fa-linkedin-in"></i></a></li>
+                    <li><a href="#" class="red-facebook"><i class="fab fa-facebook-f"></i></a></li>
+                    <li><a href="#" class="red-twitter"><i class="fab fa-twitter"></i></a></li>
+                    <li><a href="#" class="red-instagram"><i class="fab fa-instagram"></i></a></li>
+                    <li><a href="#" class="red-pinterest"><i class="fab fa-pinterest-p"></i></a></li>
+                    <li><a href="#" class="red-linkedin"><i class="fab fa-linkedin-in"></i></a></li>
                 </ul>
             </div>
 
